@@ -1,3 +1,11 @@
+2008-04-09  David Wetzel <dave@turbocat.de>
+        GSWAdaptors/Apache2/mod_gsw.c
+        * small cleanups
+        * copy all non-private headers to user
+
+        GSWeb.framework/GSWBindingNameAssociation.m
+        * remove unused code
+
 2008-03-31  David Wetzel <dave@turbocat.de>
         GSWAdaptors/Apache2/mod_gsw.c
         * make load-balancing work
